src/objects/Quarterly_Measure__c.object
<CustomObject>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Enter the evaluation date</inlineHelpText>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Objective__c</fullName>
        <label>Key Objective</label>
        <referenceTo>Key_Objective__c</referenceTo>
        <relationshipLabel>Quarterly Measures</relationshipLabel>
        <relationshipName>Quarterly_Measures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarterly_Goal_Format__c</fullName>
        <formula>CASE(TEXT( Key_Objective__r.Measured_Unit__c ), &apos;Ratio%&apos;, TEXT( Quarterly_Goal__c )+&apos;%&apos;, &apos;AED Dollars&apos;, &apos;$&apos; + TEXT( Quarterly_Goal__c ), &apos;USD Dollars&apos;, &apos;$&apos; + TEXT( Quarterly_Goal__c ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the goal for this quarter for this key objective</inlineHelpText>
        <label>Quarterly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Measure_Format__c</fullName>
        <formula>CASE(TEXT( Key_Objective__r.Measured_Unit__c ), &apos;Ratio%&apos;, TEXT( Quarterly_Measure__c )+&apos;%&apos;, &apos;AED Dollars&apos;, &apos;$&apos; + TEXT( Quarterly_Measure__c ), &apos;USD Dollars&apos;, &apos;$&apos; + TEXT( Quarterly_Measure__c ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Measure__c</fullName>
        <inlineHelpText>Enter the value measured</inlineHelpText>
        <label>Quarterly Measure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quarterly Measure</label>
    <nameField>
        <displayFormat>QM-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>